UPDATE JENKINSFILE 17